ROX-2404: Fixed dark mode tippy style (stackrox/rox#2455)

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -1214,7 +1214,5 @@ h6 {
 
 /** Tippy tooltip **/
 .tippy-popper .tippy-tooltip {
-  border: 2px solid  var(--base-800);
-  background-color: var(--base-700);
-  opacity: 0.8 !important;
+    opacity: 0.8 !important;
 }
